bugfixes and spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -83,6 +83,7 @@ h1 {
 .page-img-wrapper {
     width: 100vw;
     display: flex; justify-content: center;
+    margin-top: 2rem;
 }
 
 .page-img-wrapper>img {
